--- a/html/53/SteakPlatter.html
+++ b/html/53/SteakPlatter.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steak Platter</title>
+    <link rel="stylesheet" href="steakPlatter.css">
 </head>
 
 <body>
+    <h1>The Steak Platter</h1>
     <img src="../../SharedImages/SteakPlatter1.jpeg" alt="Steak Platter">
     <p>this steak platter comes with 20 oz of fillet Mingnon and 20 oz of the tomahawk comes along with a side of mashed
         potatoes greens and grilled veggies</p>
