--- a/html/62/portfolioMain.html
+++ b/html/62/portfolioMain.html
@@ -51,6 +51,10 @@
         </Header>
     </div>
 
+    <Div class="links">
+        <button type="button" class="btn btn-primary">Primary</button>
+    </Div>
+
     <div class="About">
         <h1>About Me</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae laboriosam accusamus aut, voluptatibus totam
@@ -64,10 +68,17 @@
     </div>
 
     <div class="mb-3">
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>For more info please contact me below and I will reach out as soon as I can </p>
+        </div>
         <label for="exampleFormControlInput1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
         <label for="exampleFormControlTextarea1" class="form-label">Message</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <div id="button"> 
+            <button type="submit">Submit</button>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
