Add grade and comments on html test

--- a/html/61/Index.html
+++ b/html/61/Index.html
@@ -497,3 +497,10 @@
 </body>
 
 </html>
+
+<!--
+Grade - 94
+Comments - good work. Few points: the words in the nav do not have space on top, same for the footer
+Same for the header.
+some of the links in the nav dont take you to the correct place in the page
+-->
