--- a/js/79/drawingMap.html
+++ b/js/79/drawingMap.html
@@ -143,7 +143,7 @@
             d[l]
                 ? console.warn(p + ' only loads once. Ignoring:', g)
                 : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
-        })({ key: 'AIzaSyCNRkodfmCZ5wz3D1ykXHgwiVr0c6k8-Ps', v: 'weekly' });
+        })({ key: 'YOUR API KEY HERE', v: 'weekly' });
     </script>
     <script src="drawingMap.js"></script>
 </body>
