--- a/js/80/mrPotatoHead.html
+++ b/js/80/mrPotatoHead.html
@@ -38,7 +38,7 @@
 </style>
 
 <body>
-    <audio src="/sharedMusic/toyStory.mp3" xautoplay controls draggable="true"></audio>
+    <audio src="/sharedMusic/toyStory.mp3" autoplay></audio>
 
     <label>
         <input type="radio" name="background" value="bg1"> andys bedroom basic
